pages/products/style/style.scss
@import '../../../style/style';
body {
	min-width: 480px;
	max-width: 1920px;
}

.product-container {
	margin-top: 2rem;
}

.product {
	overflow: hidden;
	height: 43vh;
	padding: 0;
	text-align: center;
	box-shadow: 0 0 1rem black;
	a {
		color: white;
		.product-image {
			height: 30vh;
			background: url('../res/lesson-sch-bg.jpg');
			background-size: 100% 100%;
			background-repeat: no-repeat;
		}
		.product-description {
			padding: 2rem;
			background: #3B4538;
			transition: 0.3s;
			h5 {
				font-size: 1rem;
			}
			h6 {
				font-size: 0.95rem;
			}
		}
	}
}

.product:nth-child(1) {
	width: 40%;
	.product-image {
		background: url('../res/sys-mon-bg.jpg');
		background-size: 100% 100%;
	}
}

.product:nth-child(2) {
	width: 58%;
	.product-description {
		padding: 2rem 0;
	}
}

.product:hover {
	.product-description {
		background: $green;
	}
}

.contact-container {
	margin: 2rem 0;
	padding: 4rem 0;
	text-align: center;
	color: white;
	background: $green;
	.contact-text {
		margin: 1rem;
		margin-bottom: 5rem;
		h1 {
			font-family: 'Open Sans Condensed', sans-serif;
		}
	}
	a {
		padding: 1rem 2rem;
		border: 2px solid white;
		color: white;
		transition: 0.3s;
	}
	a:hover {
		border: 2px solid black;
	}
}

@media screen and (max-width: 1366px) {
	.product {
		height: 56vh;
		a {
			.product-image {
				height: 40vh;
			}
		}
	}
}

@media screen and (max-width: 980px) {
	.product-container {
		margin: 2rem;
	}
	.product {
		height: 26vh;
		a {
			.product-image {
				height: 18.75vh;
			}
			.product-description {
				padding: 1rem;
			}
		}
	}
	.product:nth-child(2) {
		.product-description {
			padding: 0.5rem;
		}
	}
}

@media screen and (max-width: 768px) {
	.product {
		a {
			.product-description {
				padding: 0.5rem;
				h6 {
					font-size: 0.8rem;
				}
			}
		}
	}
	.contact-container {
		padding: 3rem;
		.contact-text {
			margin: 0;
			margin-bottom: 2rem;
		}
	}
}

@media screen and (max-width: 480px) {
	.product {
		background-color: #3B4538;
		height: 30vh;
		a {
			.product-image {
				height: 17vh;
			}
		}
	}
	.contact-container {
		padding: 2rem;
		.contact-text {
			margin: 0;
			margin-bottom: 1rem;
		}
		a {
			padding: 0.5rem 1rem;
			border: 2px solid white;
			color: white;
			transition: 0.3s;
		}
	}
}

